# Agent-Slack-plugin

./: .env.example  .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  conftest.py  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs-checks.yml
docs/: ARCHITECTURE.md  run-local.md  run-relay-plugin.md
extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts  notify.ts  wsClient.ts
plugins/agent-relay/: .mcp.json  README.md  codex-config-snippet.toml
router/: __init__.py  auth.py  errors.py  hashing.py  paths.py
scripts/: __init__.py  init_auth.py  init_db.py  probe_all.py  probe_file_replace.py  probe_sqlite_pragmas.py  probe_sync_root.py  seed_thread.py  smoke_phase0_claude.py  smoke_relay_mcp.py  smoke_wake.py  smoke_ws_listen.py  start_relay_thread.py  submit_turn.py
tests/: __init__.py  test_accept.py  test_api.py  test_auth.py  test_connection.py  test_credentials.py  test_e2e.py  test_init_db.py  test_lease_api.py  test_lease_sweep.py  test_leases.py  test_projections.py  test_relay_e2e.py  test_relay_models.py  test_relay_ops.py  test_relay_router_api.py  test_relay_turn_token.py  test_submit_turn.py  test_thread_api.py  test_thread_status_api.py  test_thread_status_projection_api.py  test_threads.py  test_transitions.py  test_turn_status_api.py  test_turns_api.py  test_wake_codex_home.py  test_wake_config.py  test_wake_driver.py  test_wake_guard.py  test_wake_local_config.py  test_wake_spawn.py  test_ws_wake.py
wake_driver/: __init__.py  codex_home.py  config.py  driver.py  guard.py  local_config.py  lock.py  reconcile.py  relay_config.py  run.py  spawn.py  state.py  ws_listen.py
(+38 files in other folders)
